--- a/covid/src/main/resources/application.properties
+++ b/covid/src/main/resources/application.properties
@@ -3,8 +3,9 @@ spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/database
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.hikari.connection-timeout=30000
+springdoc.swagger-ui.path=/
